# moviescripts

./: .dvcignore  .gitignore  .python-version  Dockerfile  README.md  Untitled.ipynb  dvc.yaml  enviroment.sh  init.sh  pyproject.toml
data/raw/MarvelCinematicUniverseDialogue/: README.md
data/raw/MovieDialogCorpus/: README.md
docker/: Dockerfile
jupyter_for_experiments/: Final_starwars_bert.ipynb  data_preprocessing.ipynb  dict_of_words.pickle  freezed_bert.ipynb  main.ipynb  main_starwars.ipynb  test.ipynb  test_starwars_bert.ipynb  train_bert.ipynb
moviescripts/: Unit_test.py  __init__.py  __main__.py  prediction_model.py
moviescripts/conf/: config.yaml
moviescripts/conf/callbacks/: callbacks.yaml
moviescripts/conf/data/: author_text.yaml
moviescripts/conf/data/datasets/: starwars.yaml  starwars_encoded.yaml
moviescripts/conf/logging/: base.yaml  offline.yaml
moviescripts/conf/metrics/: Accuracy.yaml
moviescripts/conf/model/: BertClassifer.yaml  BertEncodedClassifer.yaml
moviescripts/conf/optimizer/: adamw.yaml
moviescripts/conf/predict_model/: bertmodel_onnx.yaml
moviescripts/conf/tokenizer/: BertUncased.yaml
moviescripts/conf/trainer/: short_trainer.yaml  trainer.yaml
moviescripts/datasets/: augmentation.py  classification.py
moviescripts/datasets/preprocessing/: starwars_preprocessing.py
moviescripts/models/: Classifers.py  __init__.py
moviescripts/models/metrics/: __init__.py  metrics.py
moviescripts/trainer/: trainer.py
moviescripts/utils/: utils.py
moviescripts_api/: Makefile  prometheus.yml  pyproject.toml  run.py
moviescripts_api/api/: api.yaml  app.py  controller.py
moviescripts_api/api/spec/: api.yaml
moviescripts_api/docker/: Dockerfile  docker-compose.yml
moviescripts_api/postman_test/: TestAPI_moviescripts.postman_collection.json
saved/baseline/2023-04-19_1011/19c57a78/b169c878_16b3/: hparams.yaml
saved/baseline/2023-04-19_1014/19c57a78/fcbf6d22_e262/: hparams.yaml
saved/baseline/2023-04-19_1015/19c57a78/5d7fca83_dc98/: hparams.yaml
saved/baseline/2023-04-19_1016/19c57a78/50a4173e_5014/: hparams.yaml
saved/baseline/2023-04-19_1017/19c57a78/22f282f3_ebae/: hparams.yaml
saved/baseline/2023-04-19_1019/19c57a78/803eb48b_26aa/: hparams.yaml
saved/baseline/2023-04-19_1020/19c57a78/a6455e25_1c93/: hparams.yaml
saved/baseline/2023-04-19_1029/19c57a78/b5ec37bd_2246/: hparams.yaml
saved/hydra_logs/2023-04-18/01-45-16/.hydra/: hydra.yaml
saved/hydra_logs/2023-04-18/17-39-32/.hydra/: config.yaml  hydra.yaml
saved/hydra_logs/2023-04-18/17-40-41/.hydra/: hydra.yaml
saved/hydra_logs/2023-04-18/17-44-11/.hydra/: hydra.yaml
(+4 files in other folders)
