[tool.poetry]
name = "moviescripts"
version = "0.1.0"
description = "Author Classification of Movie Datasets"
authors = ["Alen Adamyan <alen_adamyan@edu.aua.am>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.13"
torch = "^2.0.0"
torchsummary = "^1.5.1"
sentence-transformers = "^2.2.2"
transformers = "^4.28.1"
tqdm = "^4.65.0"
pandas = "^2.0.0"
numpy = "^1.24.2"
logging = "^0.4.9.6"
python-dotenv = "^1.0.0"
python-git = "^2018.2.1"
hydra-core = "^1.3.2"
loguru = "^0.4.1"
omegaconf = "^2.3.0"
pytorch-lightning = "^2.0.1.post0"
fire = "^0.2.1"
onnx-simplifier = "^0.4.22"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = 'moviescripts.__main__:train'
test = 'moviescripts.__main__:test'