[tool.poetry]
name = "moviescripts"
version = "0.1.0"
description = "Author Classification of Movie Datasets"
authors = ["Alen Adamyan <alen_adamyan@edu.aua.am>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.13"
torch = "^2.0.0"
torchsummary = "^1.5.1"
sentence-transformers = "^2.2.2"
transformers = "^4.28.1"
tqdm = "^4.65.0"
pandas = "^2.0.0"
numpy = "^1.24.2"
logging = "^0.4.9.6"
python-dotenv = "^1.0.0"
python-git = "^2018.2.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
pytorch-lightning = "^2.0.1.post0"
fire = "^0.2.1"
onnx = "^1.13.1"
pickle5 = "^0.0.11"
pytest = "^7.3.1"
# logging
neptune-client = "^0.14.2"
loguru = "^0.4.1"
tensorboard = "^2.12.2"
fasttext-wheel = "^0.9.2"
connexion = "^2.14.2"
gunicorn = "^20.1.0"
pathlib = "^1.0.1"
swagger-ui-bundle = "^0.0.9"
[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
dvc = "^1.0.1"
pudb = "^2019.2"
pytest-pudb = "^0.7.0"
black = "^22.6.0"
flake8 = "^4.0.1"
pre-commit = "^3.2.2"

[tool.poetry.extras]

[tool.black]
# https://github.com/psf/black
line-length = 88
target-version = ["py39"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
known_third_party = "nox,numpy,pytest"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = 'moviescripts.__main__:train'
test = 'moviescripts.__main__:test'